<resources>
    <string name="app_name">Weather</string>
    <string name="location">Location</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="check">Check</string>
    <string name="enter_location">Enter location</string>
    <string name="feels_like">Feels like</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="update_weather">Update weather</string>
    <string name="time">Last updated</string>
    <string name="add_weather_location">Add weather location</string>
    <string name="search_location">Search location</string>
    <string name="delete">Delete</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="favourite_locations">Favourite locations</string>
    <string name="contacts">Contacts</string>
    <string name="local_weather_by_gps">Local weather by GPS</string>

    <string name="contacts_access_title">Contacts access required</string>
    <string name="contacts_access_message">Access to this device contacts is needed for educational purposes</string>
    <string name="location_access_title">Location access required</string>
    <string name="location_access_message">Access to this device location is needed for the local weather update</string>
    <string name="access_yes">Allow access</string>
    <string name="access_no">Deny access</string>
    <string name="access_ok">OK</string>

</resources>